separando o js dos arquivos html

--- a/javascript basico/ex1.html
+++ b/javascript basico/ex1.html
@@ -26,22 +26,6 @@
 
    
 
-   <script>
-
-      function carregarDiv(){
-
-         let div = document.getElementById("meu amor")
-
-         div.innerHTML = `<h1>Guinness</h1>`
-
-      }
-
-      
-
-      let botao = document.getElementById("botaoCarregar")
-
-      botao.addEventListener("click", carregarDiv)                 
-
-   </script>
+<script src="index1.js"></script>
 
 </html>
