--- a/javascript basico/ex3.html
+++ b/javascript basico/ex3.html
@@ -18,7 +18,7 @@
             <button id="botaoCarregar">Carregando cervejas...</button>
         </div>
     
-        <script src="index.js"></script>
+        <script src="index3.js"></script>
 
     </body>
     
