--- a/javascript basico/ex2.html
+++ b/javascript basico/ex2.html
@@ -25,22 +25,7 @@ Um clique subsequente apaga o div onde o nome Guiness está escrito.  -->
    </body>   
 
    
-   <script>
-    let div = document.getElementById("meu amor");
-    let botao = document.getElementById("botaoCarregar");
-    let exibirNome = true; // Variável para controlar o estado de exibição
 
-    function alternarExibicao() {
-      if (exibirNome) {
-        div.innerHTML = `<h1>Guinness</h1>`;
-      } else {
-        div.innerHTML = ''; // Remove o conteúdo da div
-      }
-
-      exibirNome = !exibirNome; // Inverte o estado de exibição
-    }
-
-    botao.addEventListener("click", alternarExibicao);
-  </script>
+        <script src="index2.js"></script>
 
 </html>
