--- a/javascript basico2/ex3.html
+++ b/javascript basico2/ex3.html
@@ -1,31 +1,45 @@
 <!-- Transforme os nomes das cervejas numa tabela (<table>) estilizada em vez de em uma sequência de divs -->
-<!DOCTYPE html>
-<html>   
+   <!DOCTYPE html>
+   <html>
+   
    <head>
-      <meta charset="UTF-8">      
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="style.css">
    </head>
+   
    <body>
-      <div id="meu amor"><button id="botaoCarregar">Carregando cervejas...</button></div>            
-   </body>   
-   <script>
-      let cervejas = ["Guiness", "Desperados", "Becks"]
-      function transformar(item){
-         return `<div style="color:blue; font-size:25px;background-color:black;" >${item}</div>`
-      }
-      function carregarDiv(){
-
-         let div = document.getElementById("meu amor")
-
-         //let cervejasHtml = [`<h1>${cervejas[0]}</h1>`,`<h1>${cervejas[1]}</h1>`, `<h1>${cervejas[2]}</h1>`] 
-
-         let cervejasHtml = cervejas.map(transformar) 
-
-         div.innerHTML = `${cervejasHtml.join("\n")}`
-      }
-      let botao = document.getElementById("botaoCarregar")
-
-      botao.addEventListener("click", carregarDiv)                 
-
-   </script>
-
-</html>
+      <div id="meu amor">
+         <button id="botaoCarregar">Carregando cervejas...</button>
+      </div>
+   
+      <script>
+         let cervejas = ["Guinness", "Desperados", "Becks"];
+   
+         function transformarEmTableRow(item) {
+            return `<tr><td>${item}</td></tr>`;
+         }
+   
+         function carregarTabela() {
+            let div = document.getElementById("meu amor");
+            let tabelaHTML = `
+               <table>
+                  <thead>
+                     <tr>
+                        <th>Cervejas</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     ${cervejas.map(transformarEmTableRow).join("")}
+                  </tbody>
+               </table>
+            `;
+            div.innerHTML = tabelaHTML;
+         }
+   
+         let botao = document.getElementById("botaoCarregar");
+         botao.addEventListener("click", carregarTabela);
+      </script>
+   </body>
+   
+   </html>
+   
