--- a/javascript basico2/ex4.html
+++ b/javascript basico2/ex4.html
@@ -22,6 +22,7 @@
         }
         function ordenaCervejas() {
             let listordenada = cervejas.sort();
+            carregarTabela();
 
         }
         function carregarTabela() {
