--- a/objetos json/index.html
+++ b/objetos json/index.html
@@ -59,7 +59,7 @@
 <body>
     <div id="container">
         <button id="botaoCarregar">Carregar cervejas...</button>
-        <div id="tabelaDiv"></div>
+        <div id="cervejasDiv"></div>
     </div>
 </body>
 
@@ -86,7 +86,7 @@
     ];
 
     function carregarTabela() {
-        let div = document.getElementById("tabelaDiv");
+        let div = document.getElementById("cervejasDiv");
         let tabelaHTML = `
             <table>
                 <thead>
