--- a/js - Arrow e callback Functions/index.html
+++ b/js - Arrow e callback Functions/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-
     <meta charset="UTF-8">
-
 </head>
 
-
-
 <body>
+    <div><a href="#" id="linkCarregar">Carregar cachaças...</a></div>
+    <div id="meuAmor"></div>
 
-    <div><button id="botaoCarregar">Carregando cervejas...</button></div>
+    <script>
+        const transformarEmTableRow = item => `<tr><td>${item}</td></tr>`;
+        let cachaças = ["GERMANA", "WEBER HAUS 7 MADEIRAS", "FAMOSINHA"];
 
-    <div id="meu amor"></div>
+        function carregarTabela(cachaçasArray) {
+            const div = document.getElementById("meuAmor");
+            const tabelaHTML = `
+               <table>
+                  <thead>
+                     <tr>
+                        <th>Cachaças</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     ${cachaçasArray.map(transformarEmTableRow).join("")}
+                  </tbody>
+               </table>
+            `;
+            div.innerHTML = tabelaHTML;
+        }
 
+        const carregarDiv = cachaçasArray => {
+            const div = document.getElementById("meuAmor");
+            const cachaçasHtml = cachaçasArray.map(item => `<div style="color:white;background-color:black;font-size:25px">${item}</div>`);
+            div.innerHTML = `${cachaçasHtml.join("\n")}`;
+        }
+
+        const linkCarregar = document.getElementById("linkCarregar");
+        linkCarregar.addEventListener("click", (event) => {
+            event.preventDefault();
+            carregarTabela(cachaças);
+        });
+
+        const linkOrdenar = document.createElement("a");
+        linkOrdenar.href = "#";
+        linkOrdenar.textContent = "Mostrar cachaças ordenadas";
+        linkOrdenar.addEventListener("click", (event) => {
+            event.preventDefault();
+            cachaças.sort();
+            carregarTabela(cachaças);
+        });
+
+        const linkEmbaralhar = document.createElement("a");
+        linkEmbaralhar.href = "#";
+        linkEmbaralhar.textContent = "Embaralhar cachaças";
+        linkEmbaralhar.addEventListener("click", (event) => {
+            event.preventDefault();
+            cachaças = cachaças.sort(() => Math.random() - 0.5);
+            carregarTabela(cachaças);
+        });
+
+        document.body.appendChild(linkOrdenar);
+        document.body.appendChild(linkEmbaralhar);
+    </script>
 </body>
-
-
-
-<script>
-
-    let cervejas = ["Guiness", "Desperados", "Becks"]
-
-    //   function carregarDiv(){
-    const carregarDiv = () => {
-        const div = document.getElementById("meu amor")
-
-        const cervejasHtml = cervejas.map(item => `<h1>${item}</h1>`)
-
-        div.innerHTML = `${cervejasHtml.join("\n")}`
-
-    }
-
-    let botao = document.getElementById("botaoCarregar")
-
-    botao.addEventListener("click", carregarDiv)
-
-</script>
 
 </html>
