--- a/Receita - React #0/react_example/index.html
+++ b/Receita - React #0/react_example/index.html
@@ -17,6 +17,8 @@
 
     </div>
 
+
+
     <script src="libs/react.js"></script>
 
     <script src="libs/react-dom.js"></script>
@@ -25,34 +27,48 @@
 
     <script>
 
-        ReactDOM.render(
 
+
+ReactDOM.render(
             React.createElement(
-
-                'h1',
-
-                { id: 'my-heading' },
-
-                React.createElement(
-
-                    'span',
-
-                    null,
-
-                    'React ',
-
-                    React.createElement('em', null, 'é muito'),
-
-                ),
-
-                ' massa!'
-
+               'div',
+               null,
+               React.createElement(
+                  'h1',
+                  {id: 'my-heading'},
+                  React.createElement(
+                     'span',
+                     null,
+                     'React ',
+                     React.createElement('em', null, 'é muito'),
+                  ),
+                  ' massa!'
+               ),
+               React.createElement(
+                  'table',
+                  null,
+                  React.createElement(
+                     'tr',
+                     null,
+                     React.createElement('th', null, 'Nome'),
+                     React.createElement('th', null, 'Idade')
+                  ),
+                  React.createElement(
+                     'tr',
+                     null,
+                     React.createElement('td', null, 'Fabrício Vale'),
+                     React.createElement('td', null, '52')
+                  ),
+                  React.createElement(
+                     'tr',
+                     null,
+                     React.createElement('td', null, 'Maria-prea'),
+                     React.createElement('td', null, '82')
+                  )
+               )
             ),
-
-            document.getElementById('app')
-
-        );
-
+            document.getElementById("app")
+         )
     </script>
 
 </body>
