--- a/Receita - React #1/react_example/index.html
+++ b/Receita - React #1/react_example/index.html
@@ -12,34 +12,39 @@
     <script src="libs/react-dom.js"></script>
     <script src="libs/babel.js"></script>
     <script type="text/babel">
-        function TabelaBebidas(){
-            
+        function TabelaBebidas() {
+            return (
+                <div id="app">
+                    <Cabecalho/>,
+
+                    <table id="tabela" border="1">
+
+                        <thead>
+
+                            <tr><th>Nome</th><th>Marca</th></tr>
+
+                        </thead>
+
+                        <tbody>
+
+                            <tr><td>Havana</td><td>Engenho Anísio Santiago</td></tr>
+
+                        </tbody>
+
+                    </table>
+
+                </div>
+            );
+        }
+        function Cabecalho(){
+            return (
+                <h1>Minha tabela de bebidas</h1>
+            );
         }
         ReactDOM.render(
-
-            <div id="app">
-
-                <table id="tabela" border="1">
-
-                    <thead>
-
-                        <tr><th>Nome</th><th>Marca</th></tr>
-
-                    </thead>
-
-                    <tbody>
-
-                        <tr><td>Havana</td><td>Engenho Anísio Santiago</td></tr>
-
-                    </tbody>
-
-                </table>
-
-            </div>
-
+            <TabelaBebidas />
             ,
-
-            document.getElementById("app"))
+            document.getElementById("app")) 
     </script>
 
 </body>
